kitty: bypass ctrl-tab

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,2 +1,7 @@
 font_family FiraMono Nerd Font Mono
 font_size 12
+
+# Pass Ctrl-Tab and Ctrl-Shift-Tab to terminal applications
+# instead of using them for tab navigation
+map ctrl+tab send_text all \x1b[27;5;9~
+map ctrl+shift+tab send_text all \x1b[27;6;9~
